--- a/index.html
+++ b/index.html
@@ -227,20 +227,12 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class="input-field col s12 m6 l6">
-                                                        <input id='field_date' type='text' id="field_date" name='field_date' class="datepicker" />
+                                                        <input id='field_date' type='text' id="field_date" name='field_date'/>
                                                         <label class='left active' for="field_date" class="active">Date</label>
                                                     </div>
                                                     <div class="input-field col s12 m6 l6">
-                                                        <label class='left active' for="field_hour">Time</label>
-                                                        <div class="col s5 no-padding">
-                                                            <select id='field_hour' type='text' id="field_hour" name='field_hour' ></select>
-                                                        </div>
-                                                        <div class="col s1 no-padding">
-                                                            <input type="text" value=":" disabled class="center" />
-                                                        </div>
-                                                        <div class="col s5 no-padding">
-                                                            <select id='field_minute' type='text' id="field_minute" name='field_minute' ></select>
-                                                        </div>
+                                                        <label class='left active' for="field_time">Time (24 hour format)</label>
+                                                        <input id='field_time' type='text' id="field_time" name='field_time' placeholder="HH:MM" />
                                                     </div>
                                                 </div>
                                                 <div class="row">
