Added email confirmation;

--- a/loading.html
+++ b/loading.html
@@ -1,59 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="author" content="RNR Developer Team">
-        <meta name="description" content="Digital marketing is an important aspect of your online business. We at Deegeelab specialise in providing tried and tested digital marketing services">
-        <meta name="keywords" content="Digital Marketing">
-        <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-        <title>Deegeelab - Your Digital Marketing Specialist in Australia</title>
-        <link href="assets/images/icon.png" rel="icon">
-        <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css">
-        <link href="assets/css/jquery.fullpage.min.css" rel="stylesheet" type="text/css">
-        <link href="assets/css/responsive.css" rel="stylesheet" type="text/css">
-        <link href="assets/css/animate.css" rel="stylesheet" type="text/css">
-        <link href="assets/css/svg.css" rel="stylesheet" type="text/css">
-        <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
-        <link href="assets/css/style.css" rel="stylesheet" type="text/css">
-    </head>
-    <body>
+<div class='box' style='width: 600px; min-height: 550px; box-shadow: 0 0 0 0 rgba(0, 0, 0, 0), 0 0 0 rgba(0, 0, 0, 0); center; margin: 0 auto; font-family: arial;'> <div style='width: 100%; margin:auto;'> <div style='box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.1), 0 0px 5px 0 rgba(0, 0, 0, 0.1);border-radius: 5px;overflow: hidden;border: 1px solid #ccc;'> <div style='padding:10px 0px 10px 0px;text-align: center;height: 100px; background: url(http://www.deegeelab.com/assets/images/email/header.png) top/cover no-repeat;'></div><div style='text-align: center; background: white;padding: 20px 50px 50px 50px;'> <ul style='list-style-type: none;display: inline-flex !important;-webkit-padding-start: 0px;'> <li style='margin: 0;'><img src='http://www.deegeelab.com/assets/images/email/bell-icon.png' style='width: 40px; display: inline-block; position: relative;'></li><li> <h1 style='margin: 0px 0px 0px 0px;position: relative;text-align: left;'>You received a consultation appointment request</h1> </li></ul> <div style='text-align:left;color:#000;margin: 0px 0px 60px 0px;'> <p><span style='font-weight: bold;'>Name:</span><br>{$data[0]}</p><p><span style='font-weight: bold;'>Business:</span><br>{$data[1]}</p><p><span style='font-weight: bold;'>Email:</span><br>{$data[2]}</p><p><span style='font-weight: bold;'>Number:</span><br>{$data[3]}</p><p><span style='font-weight: bold;'>Postal:</span><br>{$data[4]}</p><p><span style='font-weight: bold;'>Scheduled Date:</span><br>{$data[5]}{$data[6]}</p><p><span style='font-weight: bold;'>Message:</span><br>{$data[7]}</p></div><div style='border-top: 1px solid #ccc; max-width: 98%; margin:0 auto;'></div><ul style='list-style-type: none;-webkit-padding-start: 0px; display: block !important;'> <li> <div style='width: 200px; height: 155px; display: inline-block; position: relative; background: url(http://www.deegeelab.com/assets/images/email/logo.png) top/cover no-repeat;'></div></li><li><span style='margin: 0px 0px 0px 10px; top: 10px; position: relative; font-size: 12px;'>Deegeelab © 2018. All rights reserved.</span></li></ul> </div></div></div></div>
 
 
-    
-        <div class='box' style='width: 800px; height: 550px; box-shadow: 0 0 0 0 rgba(0, 0, 0, 0), 0 0 0 rgba(0, 0, 0, 0); center; margin: 0 auto; ; border-radius: 10px; font-family: arial;'>
-            <div class='box' style='width: 100%; margin:auto;'>
-                <div style='box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); border-radius: 10px;overflow: hidden; border: 1px solid #ccc;'>
-                    <div class='header' style='background: #02bad0; border-top-right-radius: 10px; border-top-left-radius: 10px; padding:10px 0px 10px 0px; text-align: center;'>
-                        You received a message from Deegeelab's contact form
-                    </div>
-                    <div class='container' style='text-align: center; background: white;padding: 10px;'>
-                        <div style='text-align:left; color:#000;'>
-                            <p><strong style='font-weight: bold;'>Name:</strong><br>{$data[0]}</p>
-                            <p><strong style='font-weight: bold;'>Business:</strong><br>{$data[1]}</p>
-                            <p><strong style='font-weight: bold;'>Email:</strong><br>{$data[2]}</p>
-                            <p><strong style='font-weight: bold;'>Number:</strong><br>{$data[3]}</p>
-                            <p><strong style='font-weight: bold;'>Postal:</strong><br>{$data[4]}</p>
-                            <p><strong style='font-weight: bold;'>Scheduled Date:</strong><br>{$data[5]} {$data[6]}</p>
-                            <p><strong style='font-weight: bold;'>Message:</strong><br>{$data[7]}</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </body>
-    <script src="assets/js/jquery.min.js"></script> 
-    <script src="assets/js/jquery.easings.min.js"></script> 
-    <script src="assets/js/jquery.sidr.min.js"></script>
-    <script src="assets/js/scrolloverflow.min.js"></script>
-    <script src="assets/js/jquery.fullPage.js"></script> 
-    <script src="assets/js/jquery.fullpage.extensions.min.js"></script> 
-    <script src="assets/js/materialize.min.js"></script> 
-    <script src="assets/js/validation/jquery.validate.min.js"></script> 
-    <script src="assets/js/validation/additional-methods.min.js"></script> 
-    <script src="assets/js/pillar.js"></script>
-    <script src="assets/js/system.js"></script>
-    <script src="assets/js/scripts.js"></script>
-    <script type="text/javascript">
-        $(".menu").sideNav();
-    </script>
-</html>
+<div class='box' style='display:block; width: 600px; min-height: 650px; box-shadow: 0 0 0 0 rgba(0, 0, 0, 0), 0 0 0 rgba(0, 0, 0, 0); center; margin: 0 auto; font-family: arial;'> <div style='width: 100%; margin:auto; background: #fff;'> <div style='box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.1), 0 0px 5px 0 rgba(0, 0, 0, 0.1);border-radius: 5px;overflow: hidden;border: 1px solid #ccc;'> <div style='padding:10px 0px 10px 0px;text-align: center;height: 100px; background: url(http://www.deegeelab.com/assets/images/email/header.png) top/cover no-repeat;'></div><div style='background: url(http://www.deegeelab.com/assets/images/email/footer.png) no-repeat;background-position: bottom right;background-size: 250px 250px;padding: 20px 50px 50px 50px;'> <ul style='list-style-type: none; display: inline-flex !important; -webkit-padding-start: 0px;'> <li style='margin: 0;'><img src='http://www.deegeelab.com/assets/images/email/bell-icon.png' style='width: 40px; display: inline-block; position: relative;'></li><li> <h1 style='margin: 0px 0px 0px 0px;top: 5px;position: relative;/* font-size: 20px; */text-align: left;'>Email confirmation</h1> </li></ul> <div style='text-align:left;color:#000;margin: 0px 0px 60px 0px;'> <p>Hi [Client name],</p><p>Welcome to Deegeelab! We received your request to book a consultation appointment with our team. Please expect a call from our representative on your preferred date and time.</p><p>We look forward to hearing more about your business and learning how we can help you reach your goals.</p><p>Thank you,<br>Deegeelab</p></div><ul style='list-style-type: none; display: inline-flex !important; -webkit-padding-start: 0px;'> <li style=' margin: 0;'> <ul style='list-style-type: none; -webkit-padding-start: 0px; display: block !important;'> <li style=' margin: 0;'> <a href='https://www.facebook.com/DeeGeeLabAU/' style='width: 40px; height: 40px; display: inline-block; position: relative; background: url(http://www.deegeelab.com/assets/images/email/facebook.png) top/cover no-repeat;'></a> <a href='https://www.instagram.com/deegeelab/' style='width: 40px; height: 40px; display: inline-block; position: relative; background: url(http://www.deegeelab.com/assets/images/email/twitter.png) top/cover no-repeat;'></a> <a href='https://twitter.com/DeegeelabAU' style='width: 40px; height: 40px; display: inline-block; position: relative; background: url(http://www.deegeelab.com/assets/images/email/ig.png) top/cover no-repeat;'></a> </li><li style=' margin: 0;'><span style='font-size: 12px;'>Email sent by Deegeelab<br>Deegeelab © 2018. All rights reserved.</span></li></ul> </li><li></li></ul> <div style='width: 90px;height: 70px;float:right;display: inline-block;position: relative;top: 40px;right: -30px;background: url(http://www.deegeelab.com/assets/images/email/logo.png) top/cover no-repeat;'></div></div></div></div></div>
