--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
                         </div>
                     </div>
                 </div> 
-            </div>
-            <div class="section fp-auto-height footer-section row">
+            <!-- </div> -->
+            <div class="section fp-auto-height footer-section row" style="margin-top: 70%;">
                 <div class="col left" style="height:60px;">
                     <ul class="middle">
                         <li class="">
@@ -286,6 +286,7 @@
                         </li>
                     </ul>
                 </div>
+            </div>
             </div>
         </div>
         <aside id="overlap-gradient">
