--- a/index.html
+++ b/index.html
@@ -171,120 +171,122 @@
                 <div class="overlap-gradient">
                     <div class="layer wrapper" data-depth="0.3">
                         <div class="holder" >
-                            <div class="card form_holder z-depth-0">
-                                <div class="card-content">
-                                    <div class="row">
-                                        <div class="col s12 m5 l4 i12" id='contact_bg'>
-                                            <h4>Let's Talk</h4>
-                                            <p class="black-text i">Your success is our success<br> Supercharge your Business Today.</p>
+                            <div class="form_holder">
+                                <div class="card z-depth-0">
+                                    <div class="card-content">
+                                        <div class="row">
+                                            <div class="col s12 m5 l4 i12" id='contact_bg'>
+                                                <h4>Let's Talk</h4>
+                                                <p class="black-text i">Your success is our success<br> Supercharge your Business Today.</p>
 
-                                            <table class="paragraph i">
-                                                <tr>
-                                                    <td width='1%'><i class="material-icons">mail_outline</i></td>
-                                                    <td>info@deegeelab.com</td>
-                                                </tr>
-                                                <tr class="hide">
-                                                    <td width='1%'><i class="material-icons">phone</i></td>
-                                                    <td>0948 999 9988</td>
-                                                </tr>
-                                                <tr>
-                                                    <td width='1%'><i class="material-icons">map</i></td>
-                                                    <td>Suite 3, Level 27 Governor Macquarrie Tower 1 Farrer Place, Sydney NSW 2000 Australia</td>
-                                                </tr>
-                                                <tr>
-                                                    <td width='1%'><i class="material-icons">map</i></td>
-                                                    <td>Unit 8 Viliran Compound Lingayen, Pangasinan Philippines</td>
-                                                </tr>
-                                            </table>
+                                                <table class="paragraph i">
+                                                    <tr>
+                                                        <td width='1%'><i class="material-icons">mail_outline</i></td>
+                                                        <td>info@deegeelab.com</td>
+                                                    </tr>
+                                                    <tr class="hide">
+                                                        <td width='1%'><i class="material-icons">phone</i></td>
+                                                        <td>0948 999 9988</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td width='1%'><i class="material-icons">map</i></td>
+                                                        <td>Suite 3, Level 27 Governor Macquarrie Tower 1 Farrer Place, Sydney NSW 2000 Australia</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td width='1%'><i class="material-icons">map</i></td>
+                                                        <td>Unit 8 Viliran Compound Lingayen, Pangasinan Philippines</td>
+                                                    </tr>
+                                                </table>
+                                            </div>
+                                            <div class="col s12 m7 l8 i12 left-border top-border">
+                                                <form id="form_query" method="post" name="form_query">
+                                                    <div class="row">
+                                                        <div class="input-field col s12">
+                                                            <input class="validate" id="field_name" name="field_name" type="text" /> 
+                                                            <label class='left' for="field_name">Name</label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="input-field col s12 m6 l6">
+                                                            <input class="validate" id="field_business" name="field_business" type="text" /> 
+                                                            <label class='left' for="field_business">Business Name</label>
+                                                        </div>
+                                                        <div class="input-field col s12 m6 l6">
+                                                            <input class="validate" id="field_email" name="field_email" type="email" /> 
+                                                            <label class='left' for="field_email">Email</label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="input-field col s12 m6 l6">
+                                                            <input class="validate" id="field_number" name="field_number" type="text" /> 
+                                                            <label class='left' for="field_number">Contact Number</label>
+                                                        </div>
+                                                        <div class="input-field col s12 m6 l6">
+                                                            <input class="validate" id="field_postal" name="field_postal" type="text" /> 
+                                                            <label class='left' for="field_postal">Post Code</label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="input-field col s12 m6 l6">
+                                                            <input id='field_date' type='text' id="field_date" name='field_date'/>
+                                                            <label class='left active' for="field_date" class="active">Date</label>
+                                                        </div>
+                                                        <div class="input-field col s12 m6 l6">
+                                                            <label class='left active' for="field_time">Time (24 hour format)</label>
+                                                            <input id='field_time' type='text' id="field_time" name='field_time' placeholder="HH:MM" />
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="input-field col s12">
+                                                            <textarea rows='5' class="validate" id="field_message" name="field_message" type="text"></textarea>
+                                                            <label class='left' for="field_message">Message</label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="row">
+                                                        <div class="input-field col s12">
+                                                            <button class="right btn-round btn-flat waves-effect waves-light white-text">Send</button>
+                                                        </div>
+                                                    </div>
+                                                </form>
+                                           </div>
                                         </div>
-                                        <div class="col s12 m7 l8 i12 left-border top-border">
-                                            <form id="form_query" method="post" name="form_query">
-                                                <div class="row">
-                                                    <div class="input-field col s12">
-                                                        <input class="validate" id="field_name" name="field_name" type="text" /> 
-                                                        <label class='left' for="field_name">Name</label>
-                                                    </div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="input-field col s12 m6 l6">
-                                                        <input class="validate" id="field_business" name="field_business" type="text" /> 
-                                                        <label class='left' for="field_business">Business Name</label>
-                                                    </div>
-                                                    <div class="input-field col s12 m6 l6">
-                                                        <input class="validate" id="field_email" name="field_email" type="email" /> 
-                                                        <label class='left' for="field_email">Email</label>
-                                                    </div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="input-field col s12 m6 l6">
-                                                        <input class="validate" id="field_number" name="field_number" type="text" /> 
-                                                        <label class='left' for="field_number">Contact Number</label>
-                                                    </div>
-                                                    <div class="input-field col s12 m6 l6">
-                                                        <input class="validate" id="field_postal" name="field_postal" type="text" /> 
-                                                        <label class='left' for="field_postal">Post Code</label>
-                                                    </div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="input-field col s12 m6 l6">
-                                                        <input id='field_date' type='text' id="field_date" name='field_date'/>
-                                                        <label class='left active' for="field_date" class="active">Date</label>
-                                                    </div>
-                                                    <div class="input-field col s12 m6 l6">
-                                                        <label class='left active' for="field_time">Time (24 hour format)</label>
-                                                        <input id='field_time' type='text' id="field_time" name='field_time' placeholder="HH:MM" />
-                                                    </div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="input-field col s12">
-                                                        <textarea rows='5' class="validate" id="field_message" name="field_message" type="text"></textarea>
-                                                        <label class='left' for="field_message">Message</label>
-                                                    </div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="input-field col s12">
-                                                        <button class="right btn-round btn-flat waves-effect waves-light white-text">Send</button>
-                                                    </div>
-                                                </div>
-                                            </form>
-                                       </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div> 
-            </div>
-            <div class="section fp-auto-height footer-section row">
-                <div class="col left" style="height:60px;">
-                    <ul class="middle">
-                        <li class="">
-                            <a class="" href="#footer"><img class='middle' width="60px" src="assets/images/icons/dgwhite.png"></a>
-                        </li>
-                        <li>
-                            <a href="#footer" class="grey-text"><i class="material-icons middle" >copyright</i> 2017 Deegeelab</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col right" style="height:60px;">
-                    <ul class="middle">
-                        <li><a href="privacy-policy.html" class="grey-text">Privacy Policy</a></li>
-                        <li><a href="terms-of-use.html" class="grey-text">Terms of use</a></li>
-                        <li class="social-icons hide-on-small-only">
-                            <a href="https://www.facebook.com/DeeGeeLabAU/" target="_blank"><img class='middle' width="30px" src="assets/images/icons/fblogo.png"></a>
-                            <a href="https://www.instagram.com/deegeelab/" target="_blank"><img class='middle' width="30px" src="assets/images/icons/iglogo.png"></a>
-                            <a href="https://twitter.com/DeegeelabAU" target="_blank"><img class='middle' width="30px" src="assets/images/icons/tlogo.png"></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col show-on-small">
-                    <ul class="middle">
-                        <li class="social-icons">
-                            <a href="https://www.facebook.com/DeeGeeLabAU/" target="_blank"><img width="30px" src="assets/images/icons/fblogo.png"></a>
-                            <a href="https://www.instagram.com/deegeelab/" target="_blank"><img width="30px" src="assets/images/icons/iglogo.png"></a>
-                            <a href="https://twitter.com/DeegeelabAU" target="_blank"><img width="30px" src="assets/images/icons/tlogo.png"></a>
-                        </li>
-                    </ul>
+                <div class="footer-section row">
+                    <div class="col left" style="height:60px;">
+                        <ul class="middle">
+                            <li class="">
+                                <a class="" href="#footer"><img class='middle' width="60px" src="assets/images/icons/dgwhite.png"></a>
+                            </li>
+                            <li>
+                                <a href="#footer" class="grey-text"><i class="material-icons middle" >copyright</i> 2017 Deegeelab</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col right" style="height:60px;">
+                        <ul class="middle">
+                            <li><a href="privacy-policy.html" class="grey-text">Privacy Policy</a></li>
+                            <li><a href="terms-of-use.html" class="grey-text">Terms of use</a></li>
+                            <li class="social-icons hide-on-small-only">
+                                <a href="https://www.facebook.com/DeeGeeLabAU/" target="_blank"><img class='middle' width="30px" src="assets/images/icons/fblogo.png"></a>
+                                <a href="https://www.instagram.com/deegeelab/" target="_blank"><img class='middle' width="30px" src="assets/images/icons/iglogo.png"></a>
+                                <a href="https://twitter.com/DeegeelabAU" target="_blank"><img class='middle' width="30px" src="assets/images/icons/tlogo.png"></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col show-on-small">
+                        <ul class="middle">
+                            <li class="social-icons">
+                                <a href="https://www.facebook.com/DeeGeeLabAU/" target="_blank"><img width="30px" src="assets/images/icons/fblogo.png"></a>
+                                <a href="https://www.instagram.com/deegeelab/" target="_blank"><img width="30px" src="assets/images/icons/iglogo.png"></a>
+                                <a href="https://twitter.com/DeegeelabAU" target="_blank"><img width="30px" src="assets/images/icons/tlogo.png"></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
