--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
         <link href="assets/images/icon.png" rel="icon" />
         <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/jquery.fullpage.min.css" rel="stylesheet" type="text/css" />
-
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-
         <link href="assets/css/responsive.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/responsive-ios.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/animate.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/svg.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/pillar.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108488895-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
+        gtag('config', 'UA-108488895-1');
+        </script>
     </head>
     <body class="home">
         <div class="loading animated">
