--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta name="google-site-verification" content="yorvnPZK1zbG6EXvYuFIFQvKheAHg0e8iDyjlPaPZK4" /> <!--Google Analytics-->
         <meta charset="UTF-8">
         <meta name="author" content="RNR Developer Team">
         <meta name="description" content="Digital marketing is an important aspect of your online business. We at Deegeelab specialise in providing tried and tested digital marketing services">
@@ -266,7 +267,7 @@
                     <div class="col left" style="height:60px;">
                         <ul class="middle">
                             <li class="">
-                                <a class="" href="#footer"><img class='middle' width="60px" src="assets/images/icons/dgwhite.png"></a>
+                                <a class="" href="#footer"><img class='middle' width="40px" src="assets/images/icons/dgwhite.png"></a>
                             </li>
                             <li>
                                 <a href="#footer" class="grey-text"><i class="material-icons middle" >copyright</i> 2017 Deegeelab</a>
