--- a/webdev.html
+++ b/webdev.html
@@ -96,11 +96,11 @@
                 </div>
            </div>
         </div>
-        <div class="section fp-auto-height footer-section row">
+        <div class="footer-section row">
             <div class="col left" style="height:60px;">
                 <ul class="middle">
                     <li class="">
-                        <a class="" href="#footer"><img class='middle' width="60px" src="assets/images/icons/dgwhite.png"></a>
+                        <a class="" href="#footer"><img class='middle' width="40px" src="assets/images/icons/dgwhite.png"></a>
                     </li>
                     <li>
                         <a href="#footer" class="grey-text"><i class="material-icons middle" >copyright</i> 2017 Deegeelab</a>
@@ -128,7 +128,6 @@
                 </ul>
             </div>
         </div>
-
         <aside id="overlap-gradient">
             <ul id="menu" class="side-nav">
                 <li>
