--- a/frontend.html
+++ b/frontend.html
@@ -124,11 +124,11 @@
                 </div>
            </div>
         </div>
-        <div class="section fp-auto-height footer-section row">
+        <div class="footer-section row">
             <div class="col left" style="height:60px;">
                 <ul class="middle">
                     <li class="">
-                        <a class="" href="#footer"><img class='middle' width="60px" src="assets/images/icons/dgwhite.png"></a>
+                        <a class="" href="#footer"><img class='middle' width="40px" src="assets/images/icons/dgwhite.png"></a>
                     </li>
                     <li>
                         <a href="#footer" class="grey-text"><i class="material-icons middle" >copyright</i> 2017 Deegeelab</a>
