--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href="assets/images/icon.png" rel="icon" />
         <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/jquery.fullpage.min.css" rel="stylesheet" type="text/css" />
-        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+        <link href="assets/css/jquery-ui.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/responsive.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/responsive-ios.css" rel="stylesheet" type="text/css" />
         <link href="assets/css/animate.css" rel="stylesheet" type="text/css" />
@@ -21,11 +21,10 @@
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108488895-1"></script>
         <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-108488895-1');
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-108488895-1');
         </script>
     </head>
     <body class="home">
@@ -278,10 +277,19 @@
                         <ul class="middle">
                             <li><a href="privacy-policy.html" class="grey-text">Privacy Policy</a></li>
                             <li><a href="terms-of-use.html" class="grey-text">Terms of use</a></li>
-                            <li class="social-icons">
+                            <li class="social-icons hide-on-small-only">
                                 <a href="https://www.facebook.com/DeeGeeLabAU/" target="_blank"><img class='middle' width="30px" src="assets/images/icons/fblogo.png"></a>
                                 <a href="https://www.instagram.com/deegeelab/" target="_blank"><img class='middle' width="30px" src="assets/images/icons/iglogo.png"></a>
                                 <a href="https://twitter.com/DeegeelabAU" target="_blank"><img class='middle' width="30px" src="assets/images/icons/tlogo.png"></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col show-on-small">
+                        <ul class="middle">
+                            <li class="social-icons">
+                                <a href="https://www.facebook.com/DeeGeeLabAU/" target="_blank"><img width="30px" src="assets/images/icons/fblogo.png"></a>
+                                <a href="https://www.instagram.com/deegeelab/" target="_blank"><img width="30px" src="assets/images/icons/iglogo.png"></a>
+                                <a href="https://twitter.com/DeegeelabAU" target="_blank"><img width="30px" src="assets/images/icons/tlogo.png"></a>
                             </li>
                         </ul>
                     </div>
@@ -292,7 +300,7 @@
             <ul id="menu" class="side-nav">
                 <li>
                     <div class="row">
-                        <a href="#" class="btn-flat btn-floating grey-text darken-4 close_menu" onclick="$(this).sideNav('hide');" style="left: 0%; top: 0%; position: absolute;"><i class="material-icons">close</i></a>
+                        <a href="#" class="btn-flat btn-floating black-text darken-4 menu" onclick="$(this).sideNav('hide');"><i class="material-icons black-text">close</i></a>
                         <ul class="collapsible collapsible-accordion" style="top: 10%; position: absolute;">
                             <li class="">
                                 <a class="waves-effect waves-blue white-text" href="social.html">Social Media Management</a>
