--- a/marketing.html
+++ b/marketing.html
@@ -107,7 +107,7 @@
            </div>
         </div>
         <div class="footer-section row">
-            <div class="col left" style="height:60px;">
+            <div class="col left footer" style="height:60px;">
                 <ul class="middle">
                     <li class="">
                         <a class="" href="#footer"><img class='middle' width="40px" src="assets/images/icons/dgwhite.png"></a>
@@ -117,7 +117,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col right" style="height:60px;">
+            <div class="col right footer" style="height:60px;">
                 <ul class="middle">
                     <li><a href="privacy-policy.html" class="grey-text">Privacy Policy</a></li>
                     <li><a href="terms-of-use.html" class="grey-text">Terms of use</a></li>
