--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                     </div>
                 </div> 
                 <div class="footer-section row">
-                    <div class="col left" style="height:60px;">
+                    <div class="col left footer" style="height:60px;">
                         <ul class="middle">
                             <li class="">
                                 <a class="" href="#footer"><img class='middle' width="40px" src="assets/images/icons/dgwhite.png"></a>
@@ -274,7 +274,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col right" style="height:60px;">
+                    <div class="col right footer" style="height:60px;">
                         <ul class="middle">
                             <li><a href="privacy-policy.html" class="grey-text">Privacy Policy</a></li>
                             <li><a href="terms-of-use.html" class="grey-text">Terms of use</a></li>
