--- a/index.html
+++ b/index.html
@@ -48,34 +48,11 @@
                             <div class="collapsible-header white-text z-depth-0">Why Deegeelab? </div>
                             <div class="collapsible-body white-text">
                                 <p>
-                                    If time is money then let us bridge this gap for you. Deegeelab is the one-stop shop of SMEs for digital marketing, social media management and customer support for both frontend and backend. Let us work as a team within your business. We have a dedicated account manager working on new strategies and timeline and assisting with the implementation of the daily action plan.
+                                    Deegeelab is the one-stop shop for digital marketing, social media management and customer support. With Deegeelab, you have a dedicated account manager working on marketing strategy and assisting your business with daily online activity. Our unique business growth model and expert client support will help you gain a deeper understanding of digital marketing, how to effectively attract your target market and how to increase sales for your business.
                                 </p>
                                 <p>
-                                    With our unique business growth model and expert ongoing support, our clients can gain a deeper understanding of digital marketing strategies and take advantage of these tools to reach out to their targeted market, attract customers and increase sales.
+                                    To keep things cost effective, we will customise a service package to suit you.
                                 </p>
-                                <h6>Deegeelab Benefits</h6>
-                                <table class="white-text paragraph">
-                                    <tr>
-                                        <td width='1%'><i class="material-icons tiny">brightness_1</i></td>
-                                        <td>24 hours response time.</td>
-                                    </tr>
-                                    <tr>
-                                        <td width='1%'><i class="material-icons tiny">brightness_1</i></td>
-                                        <td>Customised and tailored services</td>
-                                    </tr>
-                                    <tr>
-                                        <td width='1%'><i class="material-icons tiny">brightness_1</i></td>
-                                        <td>Expert ongoing support and advice</td>
-                                    </tr>
-                                    <tr>
-                                        <td width='1%'><i class="material-icons tiny">brightness_1</i></td>
-                                        <td>Competitive edge</td>
-                                    </tr>
-                                    <tr>
-                                        <td width='1%'><i class="material-icons tiny">brightness_1</i></td>
-                                        <td>Cost-effective and flexible payment plan</td>
-                                    </tr>
-                                </table>
                             </div>
                         </li>
                     </ul>
