--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                             <div class="collapsible-header white-text z-depth-0">Why Deegeelab? </div>
                             <div class="collapsible-body white-text">
                                 <p>
-                                    Deegeelab is the one-stop shop for digital marketing, social media management and customer support. With Deegeelab, you have a dedicated account manager working on marketing strategy and assisting your business with daily online activity. Our unique business growth model and expert client support will help you gain a deeper understanding of digital marketing, how to effectively attract your target market and how to increase sales for your business.
+                                    Deegeelab is the one-stop shop for digital marketing, social media management and customer support. With Deegeelab, you have a dedicated account manager working on marketing strategy and assisting your business with daily online activity.
                                 </p>
                                 <p>
-                                    To keep things cost effective, we will customise a service package to suit you.
+                                    Our unique business growth model and expert client support will help you gain a deeper understanding of digital marketing, how to effectively attract your target market and how to increase sales for your business. To keep things cost effective, we will customise a service package to suit you.
                                 </p>
                             </div>
                         </li>
